# databricks-training

./: .gitignore  README.md  config.yml  databricks.yml  pyproject.toml
.github/workflows/: deploy-databricks.yml
docs/: architecture.md
functions/: utils.py
notebooks/: analytics.py  claims_batch.py  claims_stream.py  create_uc_objects.py  diagnosis.py  members.py  providers.py
resources/: 00_job_medisure_init.yml  01_job_medisure_orchestrate.yml
setup/: 01_create_resource_groups.ps1  02_create_storage.ps1  03_create_databricks.ps1  04_create_azure_sql.ps1  05_create_databricks_connector.ps1  06_create_storage_container.ps1  07_create_key_vault.ps1  08_create_databricks_objects.ipynb  09_load_members_to_azure_sql.ipynb  azure-cli-usage.md
