[tool.poetry]
name = "azure-databricks-training"
version = "0.1.0"
description = "Azure Databricks Training"
authors = ["Thanakorn Ratanauradin <thanakorn.r@essilor.co.th>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = "^0.64.0"
configparser = "^7.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
azure-storage-blob = "^12.20.0"
azure-identity = "^1.16.0"
ipykernel = "^6.29.5"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.43"
pyodbc = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"